quick fix for overflowing code content

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -67,6 +67,10 @@ body {
       text-align: center;
     }
   }
+
+  .media-content {
+    overflow: auto;
+  }
 }
 
 .pagination-link {
